upgrade sidebar, add visual tool

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
   "Language": "English",
   "Main page": "Main Page",
   "About page": "About Page",
-  "Page not found": "Page not found"
+  "Page not found": "Page not found",
+  "ShortLanguage": "En"
 }
