add modal, portal, change header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "Main page": "Main Page",
   "About page": "About Page",
   "Page not found": "Page not found",
-  "ShortLanguage": "En"
+  "ShortLanguage": "En",
+  "Login": "Login"
 }
