--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
   "Main page": "Главная",
   "About page": "О сайте",
   "Page not found": "Страница не найдена",
-  "ShortLanguage": "Ru"
+  "ShortLanguage": "Ru",
+  "Login": "Войти"
 }
