add Error Boundary, PageError, fix Theme, add json-server

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,7 @@
   "About page": "About Page",
   "Page not found": "Page not found",
   "ShortLanguage": "En",
-  "Login": "Login"
+  "Login": "Login",
+  "An unexpected error has occurred": "An unexpected error has occurred",
+  "Reload page": "Reload page"
 }
