--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,7 @@
   "About page": "О сайте",
   "Page not found": "Страница не найдена",
   "ShortLanguage": "Ru",
-  "Login": "Войти"
+  "Login": "Войти",
+  "An unexpected error has occurred": "Произошла непредвиденная ошибка",
+  "Reload page": "Перезагрузить"
 }
