--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,7 @@
   "ShortLanguage": "En",
   "Login": "Login",
   "An unexpected error has occurred": "An unexpected error has occurred",
-  "Reload page": "Reload page"
+  "Reload page": "Reload page",
+  "Enter your username": "Enter your username",
+  "Enter your password": "Enter your password"
 }
