--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,7 @@
   "ShortLanguage": "Ru",
   "Login": "Войти",
   "An unexpected error has occurred": "Произошла непредвиденная ошибка",
-  "Reload page": "Перезагрузить"
+  "Reload page": "Перезагрузить",
+  "Enter your username": "Введите имя пользователя",
+  "Enter your password": "Введите пароль"
 }
