--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,8 @@
   "An unexpected error has occurred": "An unexpected error has occurred",
   "Reload page": "Reload page",
   "Enter your username": "Enter your username",
-  "Enter your password": "Enter your password"
+  "Enter your password": "Enter your password",
+  "Logout": "Logout",
+  "Auth Form": "Auth Form",
+  "Invalid login or password": "Invalid login or password"
 }
