add profile, optimization render

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,6 @@
   "Enter your password": "Enter your password",
   "Logout": "Logout",
   "Auth Form": "Auth Form",
-  "Invalid login or password": "Invalid login or password"
+  "Invalid login or password": "Invalid login or password",
+  "Profile page": "Profile Page"
 }
