--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,6 @@
   "Enter your password": "Введите пароль",
   "Logout": "Выйти",
   "Auth Form": "Форма авторизации",
-  "Invalid login or password": "Неверный логин или пароль"
+  "Invalid login or password": "Неверный логин или пароль",
+  "Profile page": "Профиль"
 }
