--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,3 +1,5 @@
 {
-  "Profile Page": "Страница профиля"
+  "Profile Page": "Страница профиля",
+  "Profile": "Профиль",
+  "Edit": "Редактировать"
 }
