add Articles page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,6 @@
   "Logout": "Logout",
   "Auth Form": "Auth Form",
   "Invalid login or password": "Invalid login or password",
-  "Profile page": "Profile Page"
+  "Profile page": "Profile Page",
+  "Articles page": "Articles Page"
 }
